# dll_loader_helper

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile.unix  Makefile.win  README.md  mix.exs  precompiled.erl  rebar.config
.github/workflows/: linux.yml  macos.yml  precompile.yml  windows-x86_64.yml  windows.yml
c_src/: dll_loader_helper.cpp  nif_utils.hpp
dll_loader_helper/: Makefile.win  README.md  mix.exs
dll_loader_helper/example/elixir/: Makefile.win  README.md  mix.exs
dll_loader_helper/example/elixir/lib/: hello_nif.ex
dll_loader_helper/example/shared_lib_src/: CMakeLists.txt
dll_loader_helper/lib/: dll_loader_helper.ex
dll_loader_helper/test/: dll_loader_helper_test.exs
dll_loader_helper_beam/: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile.win  README.md  checksum.erl  fetch_precompiled.sh  precompiled.erl  rebar.config  rebar3.config
dll_loader_helper_beam/c_src/: dll_loader_helper.cpp  dll_loader_helper_beam.cpp
dll_loader_helper_beam/src/: dll_loader_helper_beam.app.src  dll_loader_helper_beam.erl  dll_loader_helper_beam_nif.erl
example/: .gitignore  CMakeLists.txt  Makefile  Makefile.win  README.md  mix.exs
example/c_src/: hello_nif.c
example/elixir/: .gitignore  CMakeLists.txt  mix.exs
example/elixir/_build/dev/lib/dll_loader_helper/.mix/: compile.app_tracer  compile.elixir  compile.erlang
example/elixir/_build/dev/lib/dll_loader_helper/ebin/: dll_loader_helper.app  dll_loader_helper.beam
example/elixir/_build/dev/lib/elixir_make/.mix/: compile.app_tracer
example/elixir/_build/dev/lib/elixir_make/ebin/: Elixir.Mix.Tasks.Compile.ElixirMake.beam
example/elixir/_build/dev/lib/hello/.mix/: compile.app_tracer  compile.elixir  compile.elixir_scm
example/elixir/_build/dev/lib/hello/consolidated/: Elixir.Collectable.beam  Elixir.Enumerable.beam  Elixir.List.Chars.beam
example/elixir/_build/dev/lib/hello/ebin/: Elixir.Hello.beam  hello_nif.beam
example/elixir/_build/test/lib/dll_loader_helper/.mix/: compile.app_tracer  compile.elixir  compile.erlang
example/elixir/_build/test/lib/dll_loader_helper/ebin/: Elixir.DLLLoaderHelper.beam  dll_loader_helper.app
example/elixir/_build/test/lib/elixir_make/.mix/: compile.app_tracer  compile.elixir_scm
example/elixir/_build/test/lib/hello/.mix/: compile.app_tracer  compile.elixir
example/elixir/_build/test/lib/hello/consolidated/: Elixir.IEx.Info.beam  Elixir.Inspect.beam  Elixir.String.Chars.beam
example/elixir/_build/test/lib/hello/ebin/: hello.app
example/elixir/build_so/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
example/elixir/lib/: hello.ex
example/erlang/: .gitignore  CMakeLists.txt  Makefile  README.md  rebar.config
example/erlang/build_so/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
example/erlang/src/: hello.app.src  hello_nif.erl
example/erlang/test/: hello_test.erl
example/shared_lib_src/: .gitignore  CMakeLists.txt  hello.c  hello_export.h
example/test/: hello_test.exs
lib/: dll_loader_helper.ex  dll_loader_helper_nif.ex
src/: dll_loader_helper.app.src  dll_loader_helper.erl  dll_loader_helper_beam.app.src  dll_loader_helper_nif.erl
test/: dll_loader_helper_test.exs
